--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -68,12 +68,12 @@
   background: white;
   border-color: #333745;
 }
-.navbar-hype-button-black {
+.navbar-hype-button-white {
   margin-left: 10px;
   padding: 8px 10px 10px 10px;
   border-radius: 20em;
   line-height: 20px;
-  background: #040F0F;
+  background: none;
   color: #EEEEEE;
   font-size: 12px;
   letter-spacing: 3px;
