everything done but lineup

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -79,7 +79,7 @@
 
 
     <!-- MOBILE NAV -->
-      <%= render "shared/mobile_nav", index: index %>
+      <%= render "shared/mobile_nav", index: index, event: event %>
     </div>
   <% end %>
 
