--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,10 @@
       <div class="home-content">
         <h1 class= "intro-copy">Go clubbing</h1>
         <%= link_to events_path, id: "hype-btn", class: "pulse" do %>
-
+        <%= cl_image_tag("sunglasses_d4dc8n.png", width: 90 ) %>
         <% end %>
       </div>
   </div>
 </div>
+
+
