--- a/app/views/shared/_mobile_nav.html.erb
+++ b/app/views/shared/_mobile_nav.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </div>
   <div class="mobile-nav">
-    <%= link_to "", class: "mobile-link" do %>
+    <%= link_to event.event_url, class: "mobile-link", target: "blank" do %>
       <i class="fa fa-dollar"></i>
       <p>Buy now</p>
     <% end %>
@@ -24,5 +24,3 @@
     <% end %>
   </div>
 </div>
-
-<!-- #{event.event_url} -->
