--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -68,6 +68,9 @@
   }
 }
 // LINE UP PAGE
+.event-lineup {
+
+}
 .line-up-list {
   display: flex;
   flex-direction: row;
@@ -78,6 +81,12 @@
 .line-up-artist {
   flex-grow: 1;
   flex-shrink: 2;
+  list-style-type: none;
+  padding-left: 0px;
+  h3 {
+    font-size: 15px;
+    margin-top: 5px;
+  }
 }
 .soundcloud-link {
   color: #F89D33;
@@ -90,24 +99,31 @@ em {
   font-style: normal;
   font-size: 12px;
 }
-.full-lineup-link {
-  color: #F89D33;
-  text-decoration: none;
-  font-size: 14px;
-  border: 1px solid #F89D33;
-  padding: 5px;
-}
+// .full-lineup-link {
+//   color: #F89D33;
+//   text-decoration: none;
+//   font-size: 14px;
+//   border: 1px solid #F89D33;
+//   padding: 5px;
+// }
 .full-lineup-link:hover {
   color: #61D095;
   text-decoration: none;
   border: 1px solid #61D095;
 }
-.event-description p {
+.event-description {
   margin-bottom: 0;
+  font-size: 18px;
   font-weight: lighter;
-  font-size: 15px;
+  padding: 10px 20px;
 }
-
+.eventevent {
+  span {
+    color: #F89D33;
+    font-size: 12px;
+    padding-bottom: 5px;
+  }
+}
 
 // MAP PAGE
 .event-map {
