--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -51,7 +51,7 @@
     <!-- LINEUP PAGE -->
       <!-- LINEUP -->
         <div id="lineup-<%= index %>" class="event-lineup">
-          <div class="container text-center eventevent">
+          <div class="container text-center event-container">
             <p><span>Line-up</span></p>
               <ul>
                 <% event.event_artists.all.each do |eve_artist| %>
