map name change

--- a/app/views/shared/_mobile_nav.html.erb
+++ b/app/views/shared/_mobile_nav.html.erb
@@ -8,7 +8,7 @@
   <div class="mobile-nav">
     <%= link_to "#map-#{index}", class: "mobile-link" do %>
       <i class="fa fa-map-marker"></i>
-      <p>View</p>
+      <p>Map</p>
     <% end %>
   </div>
   <div class="mobile-nav">
