--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -29,8 +29,13 @@
           <hr class= "orange-line-top"></hr>
 
           <!-- EVENT TITLE-->
-          <div class="container">
+          <div class="container" style='padding:0; min-height: 250px; position: relative;'>
             <h3 class= "event-title text-center"><%= event.title %></h3>
+            <!-- ARROWS -->
+            <div class= "arrows">
+              <i><%= link_to (""), "#", class: "sidebar-arrow-right fa fa-angle-right", id: "next-event-button" %></i>
+              <i><%= link_to (""), "#", class: "sidebar-arrow-left fa fa-angle-left", id: "prev-event-button" %></i>
+            </div>
 
 
             <!-- EVENT DETAILS -->
@@ -44,7 +49,8 @@
                 <h3><%= event.price %></h3>
               </div>
             </div>
-          </div>
+
+        </div>
       </div>
 
 
@@ -91,13 +97,6 @@
       <%= render "shared/mobile_nav", index: index, event: event %>
     </div>
   <% end %>
-
-
-<!-- FIXED ARROWS -->
-  <div class= "arrows">
-    <i><%= link_to (""), "#", class: "sidebar-arrow-right fa fa-arrow-right", id: "next-event-button" %></i>
-    <i><%= link_to (""), "#", class: "sidebar-arrow-left fa fa-arrow-left", id: "prev-event-button" %></i>
-  </div>
 </div>
 
 
