--- a/app/views/shared/_navbar_black.html.erb
+++ b/app/views/shared/_navbar_black.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-hype navbar-hype-black navbar-hype-fixed">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-hype-brand" do %>
-    <%= image_tag "hm_logo_bl.png" %>
+    <%= image_tag "clubbl-blue.png" %>
   <% end %>
 
   <!-- Right Navigation -->
