--- a/app/views/shared/_navbar_white.html.erb
+++ b/app/views/shared/_navbar_white.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-hype">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-hype-brand" do %>
-    <%= image_tag "hm_logo_wh.png" %>
+    <%= image_tag "clubbl-pink.png" %>
   <% end %>
 
   <!-- Right Navigation -->
