--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -89,6 +89,7 @@
   flex-shrink: 2;
   list-style-type: none;
   padding-left: 0px;
+  margin: 30px;
   h3 {
     font-size: 18px;
     margin-top: 5px;
