--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -59,11 +59,11 @@
   border-color: #61D095;
   text-decoration: none;
 }
-#next-event-button:focus {
+.next-event-button:focus {
   color: white;
   text-decoration: none;
 }
-#prev-event-button:focus {
+.prev-event-button:focus {
   color: white;
   text-decoration: none;
 }
