--- a/app/views/shared/_mobile_nav.html.erb
+++ b/app/views/shared/_mobile_nav.html.erb
@@ -6,7 +6,7 @@
     <% end %>
   </div>
   <div class="mobile-nav">
-    <%= link_to "#map-#{index}", class: "mobile-link" do %>
+    <%= link_to "#map-container-#{index}", class: "mobile-link" do %>
       <i class="fa fa-map-marker"></i>
       <p>Map</p>
     <% end %>
