--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -1,7 +1,8 @@
 // GENERAL
 .event-lineup {
-  min-height: calc(100vh - 80px);
-  padding-top: 70px;
+  min-height: calc(100vh);
+  padding-top: 30px;
+  padding-bottom: 150px;
   background: #333745;
 }
 .event-infos {
