--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -24,6 +24,9 @@
   margin: -10px 0 -18px 0;
   padding: 0 0 0 0;
   font-weight: 600;
+  h3 {
+    margin-top: 10px;
+  }
 }
 .orange-line-top {
   border-top: 2px solid #F89D33;
@@ -56,7 +59,7 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
-  padding: 10px 0;
+  padding: 0;
   // background-color: rgba(0,0,0, 0.6);
   h3 {
     font-weight: lighter;
@@ -152,7 +155,7 @@ em {
   margin-top: 10px;
 }
 .get-directions {
-  margin-top: 15px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 .non-active-event {
