--- a/app/assets/stylesheets/pages/_events.scss
+++ b/app/assets/stylesheets/pages/_events.scss
@@ -55,7 +55,8 @@
 }
 .event-details-info {
   position: absolute;
-  bottom: 0;
+  top: 150px;
+  //bottom: 0;
   width: 100%;
   display: flex;
   justify-content: space-around;
