fixed search thanks seb

--- a/app/views/shared/_navbar_black.html.erb
+++ b/app/views/shared/_navbar_black.html.erb
@@ -68,7 +68,7 @@
   <div class="navbar-hype-item hidden-md hidden-lg">
       <i class="fa fa-search dropdown-toggle" id="search-icon-to-drop" data-toggle="dropdown"></i>
       <div id="mobile-locat-search-form" class="hidden">
-        <input type="text" name="loco" id="hidden-input" class="navbar-hype-search-input" placeholder="Location">
+        <input type="text" name="loco" class="navbar-hype-search-input" placeholder="Location">
       <button class="navbar-hype-button-white btn" id="locat-search-btn-dropdown">Search</button>
       </div>
   </div>
