Fix mixed content error

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,7 +22,7 @@
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(http://res.cloudinary.com/luigi-grazioli/image/upload/v1472830427/ripple_s38xqr.gif) center no-repeat #fff;
+  background: url('https://res.cloudinary.com/luigi-grazioli/image/upload/v1472830427/ripple_s38xqr.gif') center no-repeat #fff;
   background-color: #333745;
 }
 // tablet/desktop only
