--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -23,7 +23,7 @@
 
           <!-- IMAGE -->
 
-          <div class="event-photo" style="background-image: url('<%= event.photo.file ? cl_image_path(event.photo, crop: :fill) : 'http://res.cloudinary.com/luigi-grazioli/image/upload/v1473325198/clubbing_vx3eul.jpg' %>');">
+          <div class="event-photo" style="background-image: url('<%= event.photo.file ? cl_image_path(event.photo, crop: :fill) : 'https://res.cloudinary.com/luigi-grazioli/image/upload/v1473325198/clubbing_vx3eul.jpg' %>');">
           </div>
 
           <hr class= "orange-line-top"></hr>
