--- a/app/views/shared/_navbar_black.html.erb
+++ b/app/views/shared/_navbar_black.html.erb
@@ -29,7 +29,7 @@
       <!-- Profile picture and dropdown -->
       <div class="navbar-hype-item">
         <div class="dropdown">
-          <%= image_tag "http://placehold.it/30x30", class: "avatar dropdown-toggle", id: "navbar-hype-menu", "data-toggle" => "dropdown" %>
+          <%= image_tag "https://placehold.it/30x30", class: "avatar dropdown-toggle", id: "navbar-hype-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-hype-dropdown-menu">
             <li>
               <%= link_to "#" do %>
